# cave-pupper

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
src/: constants.rs  main.rs  state.rs
src/arena/: components.rs  mod.rs  systems.rs
src/characters/: actions.rs  animation.rs  mod.rs  roster.rs
src/combat/: components.rs  mod.rs
src/game/: mod.rs  systems.rs
src/hud/: mod.rs
src/input/: bindings.rs  mod.rs
src/levels/: definitions.rs  mod.rs
src/menu/: mod.rs  systems.rs
src/player/: components.rs  mod.rs  registry.rs  systems.rs
src/round/: mod.rs
