[package]
name = "Dadaistic Brawl"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
avian2d = "0.6"
rand = "0.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimized release build
[profile.release]
codegen-units = 1
lto = "thin"
